# Brain-games

./: .gitignore  README.md  makefile  pyproject.toml  setup.cfg  test.txt
brain_games/: cli.py  engine.py
brain_games/games/: game_brain_calc.py  game_brain_even.py  game_brain_gcd.py  game_brain_prime.py  game_brain_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
